# amazfit-mcp

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/amazfit_mcp/: __init__.py  __main__.py  analysis.py  cellmap.py  config.py  hae_csv.py  metrics.py  models.py  obsidian.py  recovery.py  report.py  server.py  spreadsheet.py  workouts.py  zepp_cloud.py
src/amazfitops/: __init__.py  __main__.py  analysis.py  cellmap.py  config.py  models.py  recovery.py  server.py  spreadsheet.py
tests/: conftest.py  make_fixture.py  test_analysis.py  test_hae_csv.py  test_metrics.py  test_obsidian.py  test_recovery.py  test_report.py  test_spreadsheet.py  test_workouts.py  test_zepp_cloud.py
tests/fixtures/: sample.xlsx
tests/fixtures/recovery/: export_2024-11.json  workouts_2024-11.json
