[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazfit-mcp"
version = "0.2.0"
description = "MCP server that turns Claude into a strength & running training analyst — spreadsheet load + Amazfit recovery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
amazfit-mcp = "amazfit_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/test_hae_csv.py" = ["E501"]  # literal CSV fixtures: headers cannot wrap

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
